Create a user for keepalived scripts

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,12 @@
     state: present
   when: keepalived_install == True
 
+- name: Ensure keepalived_script user is created
+  user:
+    name: keepalived_script
+    shell: /bin/nologin
+    create_home: no
+
 - name: Ensure keepalived.conf is installed
   template:
     src: keepalived.conf
