--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -24,6 +24,10 @@ global_defs {
 {% if keepalived_global_defs.no_email_faults is defined and keepalived_global_defs.no_email_faults == True %}
   init_fail
 {% endif %}
+  script_user "{{ keepalived_global_defs.script_user | default("keepalived_script") }}"
+{% if keepalived_global_defs.enable_script_security is not defined or keepalived_global_defs.enable_script_security is defined and keepalived_global_defs.enable_script_security != False %}
+  enable_script_security
+{% endif %}
 }
 {% endif %}
 {% if keepalived_vrrp_scripts is defined %}
