--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: keepalived
   author: Tristan Le Guern
   description: keepalived configuration without arm twisting.
   company: Deveryware
@@ -6,6 +7,9 @@ galaxy_info:
   min_ansible_version: 2.1
   platforms:
   - name: Debian
+    versions:
+      - buster
+      - stretch
   galaxy_tags:
   - keepalived
   - vrrp
