--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,13 @@
 ---
+- include_vars: '{{ item }}'
+  with_first_found:
+    - '{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml'
+    - '{{ ansible_distribution }}.yml'
+    - '{{ ansible_os_family }}.yml'
+
 - name: Ensure keepalived and its dependency are installed
   package:
-    name: [ 'keepalived', 'libipset3' ]
+    name: "{{ keepalived_packages }}"
     state: present
   when: keepalived_install == True
 
