Add nopreempt option to keepalived template conf

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -56,6 +56,9 @@ vrrp_instance {{ vrrp_instance.name }} {
   advert_int {{ vrrp_instance.advert_int | default(1) }}
   priority {{ vrrp_instance.priority }}
   state {{ vrrp_instance.state }}
+{% if vrrp_instance.nopreempt is defined %}
+  nopreempt
+{% endif %}
 
 {% if vrrp_instance.unicast_src_ip is defined %}
   unicast_src_ip {{ vrrp_instance.unicast_src_ip }}
