Add garp_master_refresh garp_master_delay option to keepalived template conf

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -59,6 +59,12 @@ vrrp_instance {{ vrrp_instance.name }} {
 {% if vrrp_instance.nopreempt is defined %}
   nopreempt
 {% endif %}
+{% if vrrp_instance.garp_master_delay is defined %}
+  garp_master_delay {{ vrrp_instance.garp_master_delay }}
+{% endif %}
+{% if vrrp_instance.garp_master_refresh is defined %}
+  garp_master_refresh {{ vrrp_instance.garp_master_refresh }}
+{% endif %}
 
 {% if vrrp_instance.unicast_src_ip is defined %}
   unicast_src_ip {{ vrrp_instance.unicast_src_ip }}
