Add Option Track interface

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -66,6 +66,16 @@ vrrp_instance {{ vrrp_instance.name }} {
   garp_master_refresh {{ vrrp_instance.garp_master_refresh }}
 {% endif %}
 
+{% if vrrp_instance.track_interface is defined %}
+
+  track_interface {
+{% for item in vrrp_instance.track_interface %}
+    {{ item }}
+
+{% endfor %}
+  }
+{% endif %}
+
 {% if vrrp_instance.unicast_src_ip is defined %}
   unicast_src_ip {{ vrrp_instance.unicast_src_ip }}
 {% endif %}
