Make the user able to disable variable weight, fall and rise

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 keepalived_install: False
 keepalived_packages: "{{ __keepalived_packages }}"
+vrrp_script.weight_enabled: true
+vrrp_script.fall_enabled: true
+vrrp_script.rise_enabled : true
