Remove default varaible weight, fall and rise on vrrp_script

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -39,14 +39,14 @@ vrrp_script {{ vrrp_script.name }} {
 {% if vrrp_script.timeout is defined %}
   timeout {{ vrrp_script.timeout }}
 {% endif %}
-{% if vrrp_script.weight_enabled is defined %}
-  weight {{ vrrp_script.weight | default(2) }}
+{% if vrrp_script.weight is defined %}
+  weight {{ vrrp_script.weight }}
 {% endif %}
-{% if vrrp_script.fall_enabled is defined %}
-  fall {{ vrrp_script.fall | default(2) }}
+{% if vrrp_script.fall is defined %}
+  fall {{ vrrp_script.fall }}
 {% endif %}
-{% if vrrp_script.rise_enabled is defined %}
-  rise {{ vrrp_script.rise | default(2) }}
+{% if vrrp_script.rise is defined %}
+  rise {{ vrrp_script.rise }}
 {% endif %}
 {% if vrrp_script.init_fail is defined and vrrp_script.init_fail == True %}
   init_fail
