disable interface if track interface is defined

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -92,8 +92,9 @@ vrrp_instance {{ vrrp_instance.name }} {
 {% endfor %}
   }
 {% endif %}
-
+{% if vrrp_instance.track_interface is not defined %}
   interface {{ vrrp_instance.interface }}
+{% endif %}
 {% if vrrp_instance.virtual_ipaddresses is defined %}
   virtual_ipaddress {
 {% for virtual_ipaddress in vrrp_instance.virtual_ipaddresses %}
