--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -72,16 +72,6 @@ vrrp_instance {{ vrrp_instance.name }} {
   garp_master_refresh {{ vrrp_instance.garp_master_refresh }}
 {% endif %}
 
-{% if vrrp_instance.track_interface is defined %}
-
-  track_interface {
-{% for item in vrrp_instance.track_interface %}
-    {{ item }}
-
-{% endfor %}
-  }
-{% endif %}
-
 {% if vrrp_instance.unicast_src_ip is defined %}
   unicast_src_ip {{ vrrp_instance.unicast_src_ip }}
 {% endif %}
@@ -92,7 +82,7 @@ vrrp_instance {{ vrrp_instance.name }} {
 {% endfor %}
   }
 {% endif %}
-{% if vrrp_instance.track_interface is not defined %}
+{% if vrrp_instance.track_interfaces is not defined %}
   interface {{ vrrp_instance.interface }}
 {% endif %}
 {% if vrrp_instance.virtual_ipaddresses is defined %}
