--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,25 @@
 ---
-- name: Import OS-specific variables
+- name: Import OS-specific variables.
   include_vars: '{{ item }}'
   with_first_found:
     - '{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml'
     - '{{ ansible_distribution }}.yml'
     - '{{ ansible_os_family }}.yml'
 
-- name: Ensure keepalived and its dependencies are installed
+- name: Ensure keepalived and its dependencies are installed.
   package:
     name: "{{ keepalived_packages }}"
     state: present
   when: keepalived_install
 
-- name: Ensure keepalived.conf is installed
+- name: Ensure keepalived.conf is installed.
   template:
     src: keepalived.conf
     dest: /etc/keepalived/keepalived.conf
     mode: 0644
   notify: Restart keepalived
 
-- name: Ensure keepalived is started
+- name: Ensure keepalived is started.
   service:
     name: keepalived
     state: started
