Implement support for the virtual_server block

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -21,3 +21,12 @@ vrrp_instance {{ vrrp_instance.name }} {
 }
 {% endfor %}
 {% endif %}
+{% if keepalived_virtual_servers is defined %}
+{% for virtual_server in keepalived_virtual_servers %}
+
+{{ virtual_server.comment | comment('#') }}
+virtual_server {{ virtual_server.ip }} {{ virtual_server.port | default(omit) }} {
+{{ virtual_server.content | indent(width=2, first=True) -}}
+}
+{% endfor %}
+{% endif %}
