Remove the comment filter
Instead use a jinja2 construction.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -24,7 +24,9 @@ vrrp_instance {{ vrrp_instance.name }} {
 {% if keepalived_virtual_servers is defined %}
 {% for virtual_server in keepalived_virtual_servers %}
 
-{{ virtual_server.comment | comment('#') }}
+{% if virtual_server.comment is defined %}
+# {{ virtual_server.comment }}
+{% endif %}
 virtual_server {{ virtual_server.ip }} {{ virtual_server.port | default(omit) }} {
 {{ virtual_server.content | indent(width=2, first=True) -}}
 }
