Add optionnal section keepalived_vrrp_sync_group

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -32,3 +32,18 @@ virtual_server {{ virtual_server.ip }} {{ virtual_server.port | default(omit) }}
 }
 {% endfor %}
 {% endif %}
+
+{% if keepalived_vrrp_sync_group is defined %}
+{% for vrrp_sync_group in keepalived_vrrp_sync_group %}
+vrrp_sync_group {{ vrrp_sync_group.name }} {
+  group {
+{% for instance in vrrp_sync_group.vrrp_group_instances_member %}
+    {{ instance }}
+{% endfor %}
+  }
+{% if vrrp_sync_group.content is defined %}
+{{ vrrp_sync_group.content | indent(width=2, first=True) -}}
+{% endif %}
+}
+{% endfor %}
+{% endif %}
